--- a/languages/planet4-master-theme-fr_CA.po
+++ b/languages/planet4-master-theme-fr_CA.po
@@ -260,7 +260,7 @@ msgstr ""
 
 #: templates/cookies/cookies_settings.twig:11
 msgid "Manage your cookies preferences"
-msgstr ""
+msgstr "Gérez vos préférences en matière de témoins de navigation"
 
 #. Description of the theme
 msgid "Master theme for the Planet 4 Wordpress project"
